--- a/index.html
+++ b/index.html
@@ -2795,7 +2795,7 @@ level: high`
             console.log('✅ Dashboard Automatizado v10.0.0 inicializado com SUCESSO TOTAL!');
         });
     </script>
-<manus-content-root></manus-content-root><script>
+<script>
 			var __manus_space_editor_info = {
 			spaceId : 'dashboard-ape2mz',
 			patchList : [],
